--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.2.8"
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-n": "^14.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "git-commit-msg-linter": "^3.2.8",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "@types/node": "^17.0.10",
-    "D": "^1.0.0",
-    "typescript": "^4.5.4"
+    "D": "^1.0.0"
   }
 }
