--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-n": "^14.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "git-commit-msg-linter": "^3.2.8",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.2.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
